tests/neg/misc/abs-join-01.ts

/*@ abs :: ({ } + number) => { boolean | true } */ 

function abs(x: any) {

  return 0 > x;

}

